moving files around and adding final dataframes

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -387,6 +387,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export DF to e\n",
+    "gender_df.to_excel(r'Final_output\\gender_demographics.xlsx', index = True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -499,11 +509,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "purchasing_df.to_excel(r'Resources\\purchasing.xlsx', index = True)"
+    "purchasing_df.to_excel(r'Final_output\\purchasing.xlsx', index = True)"
    ]
   },
   {
