--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -392,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export DF to e\n",
+    "# Export DF to excel\n",
     "gender_df.to_excel(r'Final_output\\gender_demographics.xlsx', index = True)"
    ]
   },
@@ -513,6 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export DF to excel\n",
     "purchasing_df.to_excel(r'Final_output\\purchasing.xlsx', index = True)"
    ]
   },
