--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,6 +1108,28 @@
     "most_pop_item_final['Total Purchase Value'] = most_pop_item_final['Total Purchase Value'].map(\"${:.2f}\".format)\n",
     "\n",
     "most_pop_item_final.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'most_pop_item_fianl' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-57005b131120>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Export DF to excel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmost_pop_item_fianl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'Final_output\\most_popular_item.xlsx'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'most_pop_item_fianl' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Export DF to excel\n",
+    "most_pop_item_fianl.to_excel(r'Final_output\\most_popular_item.xlsx', index = True)"
    ]
   },
   {
