--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,24 +1112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'most_pop_item_fianl' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-57005b131120>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Export DF to excel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmost_pop_item_fianl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'Final_output\\most_popular_item.xlsx'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'most_pop_item_fianl' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Export DF to excel\n",
-    "most_pop_item_fianl.to_excel(r'Final_output\\most_popular_item.xlsx', index = True)"
+    "most_pop_item_final.to_excel(r'Final_output\\most_popular_item.xlsx', index = True)"
    ]
   },
   {
@@ -1141,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1232,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,6 +1246,16 @@
     "most_profitable_item['Total Purchase Value'] = most_profitable_item['Total Purchase Value'].map(\"${:.2f}\".format)\n",
     "\n",
     "most_profitable_item.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export DF to excel\n",
+    "most_profitable_item.to_excel(r'Final_output\\most_profitable_item.xlsx', index = True)"
    ]
   },
   {
