--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -1264,7 +1264,7 @@
    "source": [
     "## Final Analysis\n",
     "\n",
-    "1. Males reprented 84% of all customers and they also made about 84% of all purchases. However, they purchased items with an average price about 9% lower than purchased by females and other/non-disclosed customers.\n",
+    "1. Males represented 84% of all customers and they also made about 84% of all purchases. However, they purchased items with an average price about 9% lower than purchased by females and other/non-disclosed customers.\n",
     "\n",
     "2. 20-24-year-old customers made the most in purchases (365 purchases), they spend 3.05 dollars on average. While 35-39-year old bought items with an average purchase price 18% higher, these group accounted for only 41 purchases, which represents  only 8% of total sales. 10 years old or younger customers also tend to purchase items with higher average purchase price - 10% higher on average and they account for only 4% of the total sales. The worst sales count come from customers at the age of 40 years old or older, they account for just 2.2% of the sales, however they spent 2.94 dollars on average - nothing bad.\n",
     "\n",
